--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcMovie.Models.Movie>
+﻿ @model MvcMovie.Models.MovieGenreViewModel
 
 @{
     ViewData["Title"] = "Index";
@@ -10,7 +10,15 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<form asp-controller="Movies" asp-action="Index">
+<form asp-controller="Movies" asp-action="Index" method="get">
+    <div class="input-group mb-3">
+        <select  asp-for="MovieGenre" asp-items="Model.Genres" class="custom-select" id="inputGroupSelect02">
+            <option selected value="">All</option>
+        </select>
+        <div class="input-group-append">
+            <label class="input-group-text" for="inputGroupSelect02">Movie Genre</label>
+        </div>
+    </div>
     <div class="input-group mb-3">
         <input type="text" name="SearchString" class="form-control" placeholder="Search in the movie title" aria-label="Search in the movie title" aria-describedby="basic-addon2">
         <div class="input-group-append">
@@ -23,22 +31,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Movies[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ReleaseDate)
+                @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Genre)
+                @Html.DisplayNameFor(model => model.Movies[0].Genre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model.Movies[0].Price)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Movies)
         {
             <tr>
                 <td>
