--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -11,18 +11,20 @@
 </p>
 
 <form asp-controller="Movies" asp-action="Index" method="get">
-    <div class="input-group mb-3">
-        <select  asp-for="MovieGenre" asp-items="Model.Genres" class="custom-select" id="inputGroupSelect02">
-            <option selected value="">All</option>
-        </select>
-        <div class="input-group-append">
-            <label class="input-group-text" for="inputGroupSelect02">Movie Genre</label>
+    <div class="row">
+        <div class="input-group mb-3 col-12 col-lg-6">
+            <select asp-for="MovieGenre" asp-items="Model.Genres" class="custom-select" id="inputGroupSelect02">
+                <option selected value="">All</option>
+            </select>
+            <div class="input-group-append">
+                <label class="input-group-text" for="inputGroupSelect02">Movie Genre</label>
+            </div>
         </div>
-    </div>
-    <div class="input-group mb-3">
-        <input type="text" name="SearchString" class="form-control" placeholder="Search in the movie title" aria-label="Search in the movie title" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="submit">Filter</button>
+        <div class="input-group mb-3 col-12 col-lg-6">
+            <input type="text" name="SearchString" class="form-control" placeholder="Search in the movie title" aria-label="Search in the movie title" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="submit">Filter</button>
+            </div>
         </div>
     </div>
 </form>
