--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    var message = ViewData["Message"];
 }
 
 <h1>Index</h1>
@@ -10,6 +11,8 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<p>@Html.ViewData["Message"]</p>
 
 <form asp-controller="Movies" asp-action="Index" method="get">
     <div class="row">
